@@ -91,7 +91,7 @@ TARGET_LINK_LIBRARIES(stickengine avogadro-lib
 
 INSTALL(TARGETS stickengine DESTINATION ${DESTINATION_DIR})
 
-# Ribbon engine (disabled for 0.2 release -- not fully implemented)
+# Ribbon engine (biological structure)
 set(ribbonengine_SRCS ribbonengine.cpp)
 qt4_wrap_ui(ribbonengine_UIS ribbonsettingswidget.ui)
 qt4_automoc(${ribbonengine_SRCS})
@@ -102,3 +102,15 @@ TARGET_LINK_LIBRARIES(ribbonengine avogadro-lib
 )
 
 INSTALL(TARGETS ribbonengine DESTINATION ${DESTINATION_DIR})
+
+# Ring engine - display cyclic rings
+set(ringengine_SRCS ringengine.cpp)
+#qt4_wrap_ui(ringengine_UIS ringsettingswidget.ui)
+qt4_automoc(${ringengine_SRCS})
+ADD_LIBRARY(ringengine SHARED ${ringengine_SRCS} ${ringengine_UIS} )
+TARGET_LINK_LIBRARIES(ringengine avogadro-lib
+                                ${OPENBABEL2_LIBRARIES} ${QT_LIBRARIES}
+                                ${OPENGL_LIBRARIES}
+)
+
+INSTALL(TARGETS ringengine DESTINATION ${DESTINATION_DIR})
